--- a/src/styles/info.module.scss
+++ b/src/styles/info.module.scss
@@ -1,6 +1,7 @@
 .info {
   width: 60%;
   margin: 0 auto;
+  transition: 900ms cubic-bezier(0.48, 0.15, 0.18, 1);
 }
 
 .potd {
@@ -29,7 +30,7 @@
 .description {
   color: rgb(199, 199, 199);
   font-weight: 300;
-  text-align: center;
+  font-size: 15px;
 }
 
 .date {
