--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,3 +8,13 @@
 *:focus {
   outline: none;
 }
+
+.DayPickerInput {
+  input {
+    background: rgb(46, 46, 46);
+    border: none;
+    color: #a27bd3;
+    padding: 10px;
+    border-radius: 5px;
+  }
+}
