--- a/src/styles/button.module.scss
+++ b/src/styles/button.module.scss
@@ -1,7 +1,8 @@
 .button {
   border: none;
   height: 40px;
-  padding: 0 20px;
+  padding: 0 10px;
+  width: 150px;
   border-radius: 5px;
   cursor: pointer;
   font-weight: 600;
