--- a/src/styles/info.module.scss
+++ b/src/styles/info.module.scss
@@ -31,5 +31,41 @@
   color: rgb(199, 199, 199);
   font-weight: 300;
   font-size: 15px;
+  line-height: 2.1;
   text-align: center;
+}
+
+@media screen and (max-width: 500px) {
+  .title {
+    font-size: 17px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .info {
+    width: 95%;
+  }
+
+  .potd {
+    height: 500px;
+  }
+
+  .title {
+    font-size: 20px;
+  }
+
+  .description {
+    font-size: 13px;
+    margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 801px) and (max-width: 1100px) {
+  .info {
+    width: 90%;
+  }
+
+  .title {
+    font-size: 25px;
+  }
 }
